# gjsify

./: .gitignore  .gitmodules  .release-it.json  .yarnrc.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  STATUS.md  babel.config.js  deno.code-workspace  esbuild.js  gjsify-lock.json  install.mjs  meson.build  package.json  tsconfig.json  tsconfig.node.json
.github/workflows/: deploy-docs.yml  main.yml  opencommit.yml  prebuilds.yml  release.yml
.yarn/patches/: @girs-gwebgl-0.1-npm-0.1.0-4.0.0-beta.43-83a76aab27.patch
docs/poc/: lightningcss-decision.md  wasi-imports.md
examples/basic/: esbuild.js  package.json  tsconfig.json
examples/deepkit-app/: esbuild.mjs  package.json
examples/deepkit-di/: package.json
examples/deepkit-types/: README.md  esbuild.js  package.json  tsconfig.json
examples/deno-module-jsonc/: package.json
examples/esbuild-plugin-deepkit/: README.md  package.json  tsconfig.json
examples/esbuild-plugin-transform-ext/: README.md  esbuild.mjs  package.json  tsconfig.json
examples/gio-cat/: package.json
examples/node-buffer/: package.json
examples/node-events/: package.json
examples/node-fs/: package.json
examples/node-os/: package.json  tsconfig.json
examples/node-path/: package.json
examples/node-url/: package.json
examples/webgl-demo-fade/: package.json
examples/webgl-tutorial-01/: package.json
examples/webgl-tutorial-02/: package.json
examples/webgl-tutorial-03/: package.json  tsconfig.json
examples/webgl-tutorial-04/: package.json  tsconfig.json
examples/webgl-tutorial-07/: README.md  (+1 more)
scripts/: bump-docs-version.mjs  publish-workspace.mjs
src/: index.ts
tests/: lint-engines.mjs
website/: .gitignore  astro.config.mjs  docusaurus.config.ts  ec.config.mjs  package.json
(+808 files in other folders)
